feat(#3): add connection validation to EuroCoinCollectionGroupSqliteRepository, add javadoc documentation in interface and implementation